@@ -1,128 +1,70 @@
-/*
- * Copyright 2016-present the IoT DC3 original author or authors.
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
- */
-
 package io.github.pnoker.common.facade.grpc;
 
 import io.github.pnoker.api.center.manager.CommandApiGrpc;
 import io.github.pnoker.api.center.manager.GrpcCommandIdsQuery;
+import io.github.pnoker.api.center.manager.GrpcCommandListDTO;
 import io.github.pnoker.api.center.manager.GrpcCommandQuery;
-import io.github.pnoker.api.center.manager.GrpcPageCommandDTO;
-import io.github.pnoker.api.center.manager.GrpcPageCommandQuery;
-import io.github.pnoker.api.center.manager.GrpcRCommandDTO;
-import io.github.pnoker.api.center.manager.GrpcRCommandListDTO;
-import io.github.pnoker.api.center.manager.GrpcRPageCommandDTO;
-import io.github.pnoker.api.common.GrpcR;
-import io.github.pnoker.common.enums.ErrorCode;
-import io.github.pnoker.common.exception.ServiceException;
+import io.github.pnoker.api.center.manager.GrpcOffsetCommandQuery;
+import io.github.pnoker.api.center.manager.GrpcOffsetPageCommandDTO;
+import io.github.pnoker.api.common.GrpcCommandDTO;
 import io.github.pnoker.common.facade.api.CommandFacade;
 import io.github.pnoker.common.facade.entity.bo.FacadeCommandBO;
-import io.github.pnoker.common.facade.entity.common.FacadePage;
-import io.github.pnoker.common.facade.entity.query.FacadeCommandQuery;
+import io.github.pnoker.common.facade.entity.query.FacadeCommandOffsetQuery;
 import io.github.pnoker.common.facade.grpc.builder.FacadeGrpcCommandBuilder;
+import io.github.pnoker.db.r2dbc.core.page.OffsetPage;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-/**
- * gRPC CommandFacade: forwards to Manager Center via
- * {@link CommandApiGrpc.CommandApiBlockingStub}.
- *
- * @author pnoker
- * @since 2016.10.1
- */
-@Slf4j
 @Component
 @RequiredArgsConstructor
 public class CommandGrpcFacade implements CommandFacade {
 
-    private final CommandApiGrpc.CommandApiBlockingStub commandApiBlockingStub;
-
-    private final FacadeGrpcCommandBuilder facadeGrpcCommandBuilder;
-
+    private final CommandApiGrpc.CommandApiStub commandApiStub;
+    private final FacadeGrpcCommandBuilder commandBuilder;
     private final GrpcFacadeSupport grpcFacadeSupport;
 
     @Override
-    public FacadeCommandBO getById(Long tenantId, Long id) {
-        GrpcCommandQuery request = GrpcCommandQuery.newBuilder().setCommandId(id).setTenantId(tenantId).build();
-        GrpcRCommandDTO response = grpcFacadeSupport.call("CommandFacade.getById", commandApiBlockingStub,
-                stub -> stub.getById(request));
-        if (!response.getResult().getOk()) {
-            guardOrThrow(response.getResult(), "getById");
-            return null;
+    public Mono<FacadeCommandBO> getById(Long tenantId, Long id) {
+        if (tenantId == null || id == null) {
+            return Mono.empty();
         }
-        return facadeGrpcCommandBuilder.toFacadeBO(response.getData());
+        GrpcCommandQuery request = GrpcCommandQuery.newBuilder().setTenantId(tenantId).setCommandId(id).build();
+        return ReactiveGrpcClientSupport.<GrpcCommandQuery, GrpcCommandDTO>
+                unary("CommandFacade.getById", observer -> grpcFacadeSupport.withDeadline(commandApiStub)
+                        .getById(request, observer))
+                .map(commandBuilder::toFacadeBO);
     }
 
     @Override
-    public List<FacadeCommandBO> listByIds(Long tenantId, Collection<Long> ids) {
-        if (Objects.isNull(ids) || ids.isEmpty()) {
-            return Collections.emptyList();
+    public Flux<FacadeCommandBO> listByIds(Long tenantId, Collection<Long> ids) {
+        List<Long> values = ids == null ? List.of() : ids.stream().filter(Objects::nonNull).distinct().toList();
+        if (tenantId == null || values.isEmpty()) {
+            return Flux.empty();
         }
-        List<Long> commandIds = ids.stream().filter(Objects::nonNull).distinct().toList();
-        if (commandIds.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        GrpcCommandIdsQuery request = GrpcCommandIdsQuery.newBuilder().addAllCommandIds(commandIds).setTenantId(tenantId).build();
-        GrpcRCommandListDTO response = grpcFacadeSupport.call("CommandFacade.listByIds", commandApiBlockingStub,
-                stub -> stub.listByIds(request));
-        if (!response.getResult().getOk()) {
-            guardOrThrow(response.getResult(), "listByIds");
-            return Collections.emptyList();
-        }
-        return response.getDataList().stream().map(facadeGrpcCommandBuilder::toFacadeBO).toList();
+        GrpcCommandIdsQuery request = GrpcCommandIdsQuery.newBuilder()
+                .setTenantId(tenantId)
+                .addAllCommandIds(values)
+                .build();
+        return ReactiveGrpcClientSupport.<GrpcCommandIdsQuery, GrpcCommandListDTO>
+                        unary("CommandFacade.listByIds", observer -> grpcFacadeSupport.withDeadline(commandApiStub)
+                                .listByIds(request, observer))
+                .flatMapMany(response -> Flux.fromIterable(response.getItemsList()))
+                .map(commandBuilder::toFacadeBO);
     }
 
     @Override
-    public FacadePage<FacadeCommandBO> listByPage(FacadeCommandQuery query) {
-        GrpcPageCommandQuery request = facadeGrpcCommandBuilder.toGrpcPageQuery(query);
-        GrpcRPageCommandDTO response = grpcFacadeSupport.call("CommandFacade.listByPage", commandApiBlockingStub,
-                stub -> stub.listByPage(request));
-        if (!response.getResult().getOk()) {
-            guardOrThrow(response.getResult(), "listByPage");
-            return FacadePage.empty();
-        }
-
-        GrpcPageCommandDTO pageDTO = response.getData();
-        List<FacadeCommandBO> records = pageDTO.getDataList().stream().map(facadeGrpcCommandBuilder::toFacadeBO).toList();
-
-        return new FacadePage<>(pageDTO.getPage().getCurrent(), pageDTO.getPage().getSize(),
-                pageDTO.getPage().getTotal(), pageDTO.getPage().getPages(), records);
+    public Mono<OffsetPage<FacadeCommandBO>> list(FacadeCommandOffsetQuery query) {
+        var request = commandBuilder.toGrpcOffsetQuery(query);
+        return ReactiveGrpcClientSupport.<GrpcOffsetCommandQuery, GrpcOffsetPageCommandDTO>
+                unary("CommandFacade.list", observer -> grpcFacadeSupport.withDeadline(commandApiStub)
+                        .list(request, observer))
+                .map(response -> OffsetPage.of(response.getItemsList().stream().map(commandBuilder::toFacadeBO).toList(),
+                        response.getPage().getOffset(), response.getPage().getLimit(), response.getPage().getTotal()));
     }
-
-    /**
-     * Guard a gRPC result: NOT_FOUND is treated as a normal empty outcome, any other
-     * error code throws a service exception.
-     *
-     * @param result the gRPC result envelope
-     * @param op     the operation name, for error messages
-     */
-    private void guardOrThrow(GrpcR result, String op) {
-        String code = result.getCode();
-        if (ErrorCode.NOT_FOUND.getCode().equals(code)) {
-            log.debug("CommandGrpcFacade.{} => no resource", op);
-            return;
-        }
-        throw new ServiceException("CommandFacade." + op + " failed: [" + code + "] " + result.getMessage());
-    }
-
 }
